<resources>
    <string name="app_name">AndroidPemulaSubmission</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_name">Name</string>
    <string name="txt_price">Price</string>
    <string name="txt_brand">Brand</string>
    <string name="txt_description">Description</string>
    <string name="txt_about">About</string>
    <string name="txt_floatingactionbutton">FloatingActionButton</string>
    <string name="txt_full_name">Ayesha Azeema</string>
    <string name="txt_email">ayesha.azeema@gmail.com</string>
</resources>