<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".view.detail.DetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:clickable="true"
        android:contentDescription="@string/txt_floatingactionbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/ivDetail"
        android:layout_width="@dimen/_250dp"
        android:layout_height="@dimen/_250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_30dp"
        android:contentDescription="@string/txt_imageview"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:paddingStart="@dimen/_16dp"
        android:paddingTop="@dimen/_30dp"
        android:paddingEnd="@dimen/_16dp">

        <TextView
            android:id="@+id/tvNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBrandDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_brand"
            android:textColor="@color/gray_70"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvNameDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNameDetail" />

        <TextView
            android:id="@+id/tvPriceDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_price"
            android:textColor="@color/blue"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameDetail" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/txt_description"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceDetail" />

        <TextView
            android:id="@+id/tvDescriptionDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_30dp"
            android:text="@string/txt_description"
            android:textColor="@color/gray_70"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>