<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.about.AboutActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:clickable="true"
        android:contentDescription="@string/txt_floatingactionbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fabAbout">

        <ImageView
            android:id="@+id/ivAbout"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:contentDescription="@string/txt_imageview"
            android:scaleType="centerCrop"
            tools:src="@drawable/about" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvNameAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/txt_full_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvAbout" />

    <TextView
        android:id="@+id/tvEmailAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/txt_email"
        android:textColor="@color/blue"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameAbout" />

</androidx.constraintlayout.widget.ConstraintLayout>