<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_16dp"
    android:layout_marginTop="@dimen/_8dp"
    android:layout_marginEnd="@dimen/_16dp"
    android:layout_marginBottom="@dimen/_8dp"
    app:cardCornerRadius="@dimen/_10dp"
    app:cardElevation="@dimen/_4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10dp">

        <ImageView
            android:id="@+id/ivItem"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:backgroundTint="@color/background_color"
            android:contentDescription="@string/txt_imageview"
            app:layout_constraintEnd_toStartOf="@+id/tvNameItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvNameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/txt_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            app:layout_constraintStart_toEndOf="@+id/ivItem"
            app:layout_constraintTop_toTopOf="@+id/ivItem" />

        <TextView
            android:id="@+id/tvPriceItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/txt_price"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/ivItem"
            app:layout_constraintStart_toEndOf="@+id/ivItem"
            app:layout_constraintTop_toBottomOf="@+id/tvNameItem" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>